--- a/familysleep/app/styles/partials/singleweeklyview.scss
+++ b/familysleep/app/styles/partials/singleweeklyview.scss
@@ -12,7 +12,7 @@
   top: 30px;
   left: 130px;
   margin-bottom: 20px;
-  font-size: 19px;
+  font-size: 20px;
   width: 100%;
 }
 
@@ -34,13 +34,13 @@
 }
 
 #swv-legend {
-	margin-bottom: 65px;
+	margin-bottom: 90px;
   margin-left: 400px;
   padding-top: 35px;
 }
 
 #swv-legend li {
-	display:inline-block;
+	display: inline-block;
 }
 
 /*
@@ -54,7 +54,7 @@
 #swv-legend li:nth-child(4), 
 #swv-legend li:nth-child(6), 
 #swv-legend li:nth-child(8) {
-  	margin-right:10px; 
+  	margin-right: 25px; 
     font-size: medium;
 }
 
